--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Absence Reporting System</title>
-  <link rel="stylesheet" href="/comp484.css">
+  <link rel="stylesheet" href="http://twfriedman.github.com/twfriedman.github.io/css/comp484.css">
 </head>
 <body>
   <div id='banner'>
